# tds-feedback-handler

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  fly.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: fly-deploy.yml
sql/: feedbacktable.sql
src/: appstate.rs  errors.rs  main.rs  tls.rs  types.rs
templates/: index.html
