[package]
name = "tds-feedback-handler"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["json"] }
axum_csrf = { version = "0.9.0", features = ["layer"] }
chrono = "0.4.30"
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
rustls = "0.21.7"
serde = { version = "1.0.188", features = ["derive"] }
time = "0.3.36"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.10.0"
tower_governor = { version = "0.3", features = ["axum"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
validator = { version = "0.18.0", features = ["derive"] }
webpki-roots = "0.25.2"

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }

[profile.size-opt2]
inherits = "release"
strip = true # strip symbols from the binary
opt-level = "z" # Optimize for size
lto = true # Link Time Optimization (LTO)